Beta-6
==============================================
Refectored app.py to submodules
Fixes for Redis instances with Passwords
Added Confirmation Dialog for Deletion of Channels in Admin Interface
Added Confirmation Dialog for Deletion of Channels in User Channels Interface
Added Ability to Select Sort for the Main Display Page
Removed EasyMDE automatic download of Font Awesome and Other External Dependencies
Refactored Theme Logic - Themes no longer require a separate security directory
Refactored Theme Layout - Themes now expect layout for CSS files to be as follows: /opt/osp/static/css/<themename>/theme.css
Added Saving of Video Player Volume to stored cookie under 'ospvolume'
Changing System Logo will now update the Favicons
Tooltips added to all players in Defaultv2
Fixed an issue with Streaming Role was required for using an invite code
Added Additional Checks to Ensure accurate live view count
Fixes Embedded Stream to Allow Embed Views to count against Live Count
Upgraded Requests from 2.18.4 to 2.20.0 - CVE-2018-18074
Upgraded psutil from 5.6.3 to 5.6.6 - CVE-2019-18874

Beta-5b
==============================================
Added CORS header for APIv1 Endpoint
Fixed an issue with Redis Authentication where OSP would not use the Password to Connect
Fixed issue with docker-compose where OSP was starting before the database had started
Added new control script, osp-config.sh for Install/Reinstall/Restarting of Services/Upgrading
Removed dbUpgrade.sh in favor of osp-config.sh
Removed osp-setup.sh in favor of osp-config.sh
Confirmation Dialog added to Deletion of Webhooks per Issue #178

Beta-5a
==============================================
Corrected an Error where having Video Recordings disabled at a system level caused an error in changing User Channel Settings
Added the ability for Admins to delete Live Stream entries for when a stream may get stuck